[workspace]
members = ["./crates/*"]

[package]
name = "networked_physics_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.bevy]
version = "0.8.1"

[dependencies.iyes_loopless]
git = "https://github.com/IyesGames/iyes_loopless.git"

[dependencies.bevy_rapier3d]
version = "0.17.0"